--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,8 @@ h4,
 h5,
 h6,
 p {
-    padding: 1px;
-    border-width: 1px;
+    padding: 0px;
+    border-width: 0px;
     border-style: solid;
     border-color: #000000;
 }
@@ -32,21 +32,15 @@ body {
     height: 150px;
 }
 
-#wins-losses {
+#record {
     background-color: aqua;
-}
-
-#wins {
-    height: 50%;
-}
-
-#losses {
-    height: 50%;
 }
 
 .crystal {
     width: 100%;
     height: 100%;
+    border-style: solid;
+    border-width: 1px;
 }
 
 #score {
