--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,13 +41,10 @@ body {
     height: 100%;
     border-style: solid;
     border-width: 1px;
+    cursor: pointer;
 }
 
-#score {
-    
-}
-
-/* footer
+/*
 footer {
     position: fixed;
     bottom: 0px;
